--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,6 @@ body {
 
   display: flex;
   align-items: center;
-  align-content: center;
   justify-content: center;
 
   font-family: "Helvetica Neue", sans-serif;
@@ -20,4 +19,6 @@ body {
   padding-top: 0;
   position: absolute;
   top: 0; bottom: 0; left: 0; right: 0;
+
+  transition: 0.3s all ease-out;
 }
